# cybersecurity-africa-forum

./: DATA354.pbix  DOCUMENTATION TECHNIQUE HIRING CHALLENGE DATA ANALYST.docx  README.md  acticle_number_by_year.csv  enchainement_les_plus_presents.csv  final_data_frame.csv  frequence_all_words.csv  frequence_of_each_word_by_year.csv  mining.ipynb  pyproject.toml  taille_champ_lexical_by_year.csv  title_contain_word.csv  top_100_all_words.csv
.ipynb_checkpoints/: mining-checkpoint.ipynb
caf/: scrapy.cfg
caf/caf/: items.py  middlewares.py  pipelines.py  settings.py
caf/caf/spiders/: arxiv.py  arxiv2.py  gscholar.py  ieee.py  scienceDirect.py  scinapse.py  testscrap.py
power bi/: DATA354.pbix
