[tool.poetry]
name = "caf"
version = "0.1.0"
description = ""
authors = ["iAbdelRahim <110096698+iAbdelRahim@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.0"
ipython = "^8.17.2"
items = "^0.6.5"
psycopg2 = "^2.9.9"
scrapy-selenium = "^0.0.7"
scrapy-rotating-proxies = "^0.6.2"
jupyter = "^1.0.0"
pandas = "^2.1.3"
nltk = "^3.8.1"
wordcloud = "^1.9.2"
gender-guesser = "^0.4.0"
networkx = "^3.2.1"
scipy = "^1.11.4"
scrapy-splash = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
